--- a/style.css
+++ b/style.css
@@ -83,7 +83,15 @@ h1, h2, h3, h4, h5, h6 {
 -------------------------------------------------------------*/
 body {
   font-family: 'Roboto', sans-serif;
+  zoom: 145%;
+  
 }
+
+.lb-outerContainer {
+
+  zoom: 60%;
+  
+} 
 
 h1 {
   font-size: 28px;
@@ -1620,5 +1628,25 @@ textarea {
     padding-top: 50px;
   }
 }
+
+.btn {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: rgba(0, 0, 0, 0.872);
+  color: white;
+}
+
+#cv {
+  color: white;
+}
+
 
 
