--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
 -------------------------------------------------------------*/
 body {
   font-family: 'Roboto', sans-serif;
-  zoom: 130%;
+  
   
 }
 
@@ -1784,3 +1784,16 @@ textarea {
   color: rgb(0, 100, 140) !important;
   font-size: 16px !important;
 }
+
+
+@media (min-width: 1281px) {
+  
+  body {
+    zoom: 130%;
+    
+  }
+  
+}
+
+
+
