--- a/style.css
+++ b/style.css
@@ -1785,7 +1785,7 @@ textarea {
   font-size: 16px !important;
 }
 
-
+/*
 @media (min-width: 1281px) {
   
   body {
@@ -1793,7 +1793,7 @@ textarea {
     
   }
   
-}
+} */
 
 
 
