--- a/style.css
+++ b/style.css
@@ -1816,3 +1816,14 @@ textarea {
 
   opacity: .95;
 }
+
+
+#rounded {
+  border-style: solid;
+  -webkit-border-radius: 4px;
+-webkit-border-top-left-radius: 8px;
+-moz-border-radius: 4px;
+-moz-border-radius-topleft: 8px;
+border-radius: 4px;
+border-top-left-radius: 8px;
+}
